Revision history for File::DataClass

         - Added chown
         - Stat->{mode} is now & 07777 so that the perms val roundtrips
         - Added chmod and copy methods

0.5.271  2011-05-30
         - Fixed base path bug in IO::absolute
         - Can now pass dtd into Storage::XML
         - Improved directory creation permission handling. Ignores umask
         - Use File::Path::make_path not mkpath

0.4.268  2011-05-15
         - Added substitute method to IO
         - Fixed logic error in IO filter processing
         - Added more exception handling tests
         - Fixed casing on Exception_Class class attribute
         - Chomped mail_domain attribute in MailAliases

0.3.259  2011-04-12
         - Suppressed dcollins CPAN testing
         - Added force_array to storage attributes so that arrays can
           be specified through the constructor call
         - Set lock_class to 'none' to prevent the creation of a lock object
         - Added cache_class schema attribute. Set to 'none' to defeat cache
         - Changed _utf8 attribute to is_utf8 for sense and clarity
         - Moved boilerplate M::B subclass code to inc/Bob.pm
         - Upgraded Module::Build
         - Tweaked cache construction and tightend cache typing

0.3.239  2011-02-22
         - Suppressed Konig CPAN testing again

0.3.238  2011-01-26
         - Removed extra unwanted attributes from XML::Bare read filter
         - Updated exception handling class

0.2.234  2010-10-06
         - Fixed bare io keywords in tests after Moose 1.15
         - Added unlink_on_exit to cache default attributes

0.1.228  2010-09-28
         - Started this log